V0.8.2
---------
 * Added support for translucent windows and dialogs.
 * Made changes to Kvantum Manager (to cover window translucency).

V0.8.1
---------
 * Force Dolphin's view to recognize the base color.
 * Added a hacking variable to force text contrast in apps that don't respect dark themes.
 * Added a configuration page to Kvantum Manager.
 * Added a theme deleting button to Kvantum Manager.

V0.8
---------
 * Added support for right to left layouts as far as needed.
 * Start kvantumpreview from Kvantum Manager.
 * Added Qt5 support.

V0.7.4
---------
 * Don't duplicate the field (line-edit) of a spinbox.
 * When drawing the interior and frame of an editable combobox, don't cover its line-edit area.

V0.7.3
---------
 * Mostly rely on own colors defined under the GeneralColors section.

V0.7.2
---------
 * Added a hacking variable for KTitleWidget.
 * Made toolbox labels respect custom colors.

V0.7.1
---------
 * Added a Hacks section. Currently it has only one hack for Dolphin.
 * Remove flat backgrounds from scroll areas also when they are inside toolboxes.
 * Use update() instead of repaint() to make busy progressbars take less CPU time.

V0.7
---------
 * Added a theme manager for installing and choosing Kvantum themes.
 * Remember the last chosen path in the open dialog of Kvantum Manager.
 * Make use of Kvantum Manager's statusbar.

V0.6.3
---------
 * Use "sudo make install" for installation.
 * Added a new variable for spreading the indicator of a progressbar across its whole groove and not just its interior.
 * Removed ugly (flat) backgrounds from toolboxes.

V0.6.2
---------
 * Don't display a combo toggled when its menu isn't shown.
 * Don't use the focus text color for toggled or pressed widgets.
 * Added a toggle text color (distinct from press text color).
 * Level a popup list with the bottom or top edge of its combobox while not letting the former cover the latter.
 * Don't use toggled and pressed states for the progressbar indicator.
